# racker-example-plugin

./: .gitignore  Cargo.toml  racker-build
resources/: hello_world.txt  plugin.json
src/: lib.rs
