[package]
name = "racker-example-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
racker = { git = "https://github.com/fadeoffical/racker.git", branch = "develop" }
log = "0.4"
